## Makefile.am for tuxtype - data/sounds:
## Process with Automake to create Makefile.in

soundsdir = $(pkgdatadir)/sounds

dist_sounds_DATA = tuxi.ogg \
  alarm.wav \
  bite.wav \
  buzz.wav \
  cheer.wav \
  excuseme.wav \
  explosion.wav \
  harp.wav \
  kmus1.wav \
  kmus2.wav \
  kmus3.wav \
  kmus4.wav \
  laser.wav \
  lose.wav \
  pause.wav \
  pop.wav \
  run.wav \
  shieldsdown.wav \
  splat.wav \
  tock.wav \
  win.wav \
  winfinal.wav \
  game.mod \
  game2.mod \
  game3.mod \
  README_SOUNDS.TXT
