## Makefile.am for tuxtype - data/themes:
## Process with Automake to create Makefile.in

SUBDIRS = armenian \
  assamese \
  asturian \
  belarussian \
  bokmal \
  bulgarian \
  brazilian-portuguese \
  catalan \
  czech \
  dansk \
  deutsch \
  espanol \
  euskara \
  french \
  greek \
  gujarati \
  hebrew \
  hindi \
  hungarian \
  italian \
  jamaican \
  kannada \
  korean \
  lithuanian \
  malayalam \
  nepali \
  nederlands \
  nynorsk \
  oriya \
  punjabi \
  romanian \
  russian \
  suomi	\
  svenska \
  swahili \
  tamil \
  telugu \
  thai \
  ukrainian \
  wolof

themesdir = $(pkgdatadir)/themes
