## Makefile.am for tuxtype - data/themes:
## Process with Automake to create Makefile.in

SUBDIRS = armenian \
  assamese \
  asturian \
  belarussian \
  bengali \
  bokmal \
  brazilian-portuguese \
  bulgarian \
  catalan \
  czech \
  dansk \
  deutsch \
  eesti \
  espanol \
  euskara \
  french \
  greek \
  gujarati \
  hebrew \
  hindi \
  hungarian \
  italian \
  jamaican \
  kannada \
  korean \
  lithuanian \
  malayalam \
  marathi \
  nederlands \
  nepali \
  nynorsk \
  oriya \
  punjabi \
  romanian \
  russian \
  suomi	\
  svenska \
  swahili \
  tamil \
  telugu \
  thai \
  turkana \
  ukrainian \
  wolof

themesdir = $(pkgdatadir)/themes
