## Makefile.am for tuxtype - data/words:
## Process with Automake to create Makefile.in

wordsdir = $(pkgdatadir)/words

dist_words_DATA = alphabet.txt \
  animals.txt \
  astronomy.txt \
  colors.txt \
  elements.txt \
  fingers.txt \
  fruit.txt \
  geography.txt \
  numbers.txt \
  plants.txt \
  shapes.txt \
  trees.txt \
  words1.txt \
  words2.txt \
  words3.txt
