####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = words1.txt words2.txt words3.txt words4.txt 

install-data-local:
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/data/
	$(INSTALL_DATA) $(srcdir)/words1.txt $(DESTDIR)$(datadir)/tuxtype/data/words1.txt
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/data/
	$(INSTALL_DATA) $(srcdir)/words2.txt $(DESTDIR)$(datadir)/tuxtype/data/words2.txt
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/data/
	$(INSTALL_DATA) $(srcdir)/words3.txt $(DESTDIR)$(datadir)/tuxtype/data/words3.txt
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/data/
	$(INSTALL_DATA) $(srcdir)/words4.txt $(DESTDIR)$(datadir)/tuxtype/data/words4.txt

uninstall-local:
	-rm -f $(DESTDIR)$(datadir)/tuxtype/data/words1.txt
	-rm -f $(DESTDIR)$(datadir)/tuxtype/data/words2.txt
	-rm -f $(DESTDIR)$(datadir)/tuxtype/data/words3.txt
	-rm -f $(DESTDIR)$(datadir)/tuxtype/data/words4.txt

####### kdevelop will overwrite this part!!! (end)############
