####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = bite.wav excuseme.wav kmus1.wav kmus2.wav kmus3.wav kmus4.wav lose.wav pause.wav run.wav splat.wav win.wav winfinal.wav README_SOUNDS.TXT funkbrk.it 

install-data-local:
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/sounds/
	$(INSTALL_DATA) $(srcdir)/bite.wav $(DESTDIR)$(datadir)/tuxtype/sounds/bite.wav
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/sounds/
	$(INSTALL_DATA) $(srcdir)/excuseme.wav $(DESTDIR)$(datadir)/tuxtype/sounds/excuseme.wav
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/sounds/
	$(INSTALL_DATA) $(srcdir)/kmus1.wav $(DESTDIR)$(datadir)/tuxtype/sounds/kmus1.wav
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/sounds/
	$(INSTALL_DATA) $(srcdir)/kmus2.wav $(DESTDIR)$(datadir)/tuxtype/sounds/kmus2.wav
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/sounds/
	$(INSTALL_DATA) $(srcdir)/kmus3.wav $(DESTDIR)$(datadir)/tuxtype/sounds/kmus3.wav
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/sounds/
	$(INSTALL_DATA) $(srcdir)/kmus4.wav $(DESTDIR)$(datadir)/tuxtype/sounds/kmus4.wav
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/sounds/
	$(INSTALL_DATA) $(srcdir)/lose.wav $(DESTDIR)$(datadir)/tuxtype/sounds/lose.wav
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/sounds/
	$(INSTALL_DATA) $(srcdir)/pause.wav $(DESTDIR)$(datadir)/tuxtype/sounds/pause.wav
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/sounds/
	$(INSTALL_DATA) $(srcdir)/run.wav $(DESTDIR)$(datadir)/tuxtype/sounds/run.wav
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/sounds/
	$(INSTALL_DATA) $(srcdir)/splat.wav $(DESTDIR)$(datadir)/tuxtype/sounds/splat.wav
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/sounds/
	$(INSTALL_DATA) $(srcdir)/win.wav $(DESTDIR)$(datadir)/tuxtype/sounds/win.wav
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/sounds/
	$(INSTALL_DATA) $(srcdir)/winfinal.wav $(DESTDIR)$(datadir)/tuxtype/sounds/winfinal.wav
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/
	$(INSTALL_DATA) $(srcdir)/README_SOUNDS.TXT $(DESTDIR)$(datadir)/tuxtype/README_SOUNDS.TXT
	$(mkinstalldirs) $(DESTDIR)$(datadir)/tuxtype/sounds/
	$(INSTALL_DATA) $(srcdir)/funkbrk.it $(DESTDIR)$(datadir)/tuxtype/sounds/funkbrk.it

uninstall-local:
	-rm -f $(DESTDIR)$(datadir)/tuxtype/sounds/bite.wav
	-rm -f $(DESTDIR)$(datadir)/tuxtype/sounds/excuseme.wav
	-rm -f $(DESTDIR)$(datadir)/tuxtype/sounds/kmus1.wav
	-rm -f $(DESTDIR)$(datadir)/tuxtype/sounds/kmus2.wav
	-rm -f $(DESTDIR)$(datadir)/tuxtype/sounds/kmus3.wav
	-rm -f $(DESTDIR)$(datadir)/tuxtype/sounds/kmus4.wav
	-rm -f $(DESTDIR)$(datadir)/tuxtype/sounds/lose.wav
	-rm -f $(DESTDIR)$(datadir)/tuxtype/sounds/pause.wav
	-rm -f $(DESTDIR)$(datadir)/tuxtype/sounds/run.wav
	-rm -f $(DESTDIR)$(datadir)/tuxtype/sounds/splat.wav
	-rm -f $(DESTDIR)$(datadir)/tuxtype/sounds/win.wav
	-rm -f $(DESTDIR)$(datadir)/tuxtype/sounds/winfinal.wav
	-rm -f $(DESTDIR)$(datadir)/tuxtype/README_SOUNDS.TXT
	-rm -f $(DESTDIR)$(datadir)/tuxtype/sounds/funkbrk.it

####### kdevelop will overwrite this part!!! (end)############
