## Makefile.am for tuxtype - images/cities:
## Process with Automake to create Makefile.in

images_citiesdir = $(pkgdatadir)/images/cities

dist_images_cities_DATA = cdead-blue.png\
cdead-green.png\
cdead-orange.png\
cdead-red.png\
city-blue.png\
city-green.png\
city-orange.png\
city-red.png\
csplode-blue-1.png\
csplode-blue-2.png\
csplode-blue-3.png\
csplode-blue-4.png\
csplode-blue-5.png\
csplode-green-1.png\
csplode-green-2.png\
csplode-green-3.png\
csplode-green-4.png\
csplode-green-5.png\
csplode-orange-1.png\
csplode-orange-2.png\
csplode-orange-3.png\
csplode-orange-4.png\
csplode-orange-5.png\
csplode-red-1.png\
csplode-red-2.png\
csplode-red-3.png\
csplode-red-4.png\
csplode-red-5.png\
shield0.png\
shield1.png\
shield2.png\
shield3.png\
shields.png
