EXTRA_DIST = hands.png\
0.png\
1.png\
2.png\
3.png\
4.png\
5.png\
6.png\
7.png\
8.png\
9.png



install-data-local:
	$(MKDIR_P) $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands
	$(INSTALL_DATA) $(srcdir)/0.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/0.png
	$(INSTALL_DATA) $(srcdir)/1.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/1.png
	$(INSTALL_DATA) $(srcdir)/hands.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/hands.png
	$(INSTALL_DATA) $(srcdir)/2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/2.png
	$(INSTALL_DATA) $(srcdir)/3.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/3.png
	$(INSTALL_DATA) $(srcdir)/4.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/4.png
	$(INSTALL_DATA) $(srcdir)/5.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/5.png
	$(INSTALL_DATA) $(srcdir)/6.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/6.png
	$(INSTALL_DATA) $(srcdir)/7.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/7.png
	$(INSTALL_DATA) $(srcdir)/8.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/8.png
	$(INSTALL_DATA) $(srcdir)/9.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/9.png



uninstall-local:
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/0.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/1.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/hands.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/3.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/4.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/5.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/6.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/7.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/8.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hands/9.png
