## Makefile.am for tuxtype - images/hands:
## Process with Automake to create Makefile.in

images_handsdir = $(pkgdatadir)/images/hands

dist_images_hands_DATA = hands.png \
  0.png \
  1.png \
  2.png \
  3.png \
  4.png \
  5.png \
  6.png \
  7.png \
  8.png \
  9.png \
  none.png \
  lshift.png \
  rshift.png