## Makefile.am for tuxtype - data/images/keyboard:
## Process with Automake to create Makefile.in

images_keyboarddir = $(pkgdatadir)/data/images/keyboard

dist_images_keyboard_DATA = keyboard.png \
  keyboard-us.png \
  keyboard.eps \
  keyboard-us.eps \
  esc.png \
  larrow.png \
  space.png \
  rarrow.png
	keyboard_B05.png \
	keyboard_C11.png \
	keyboard_E04.png \
	keyboard_A00.png \
	keyboard_B06.png \
	keyboard_C12.png \
	keyboard_E05.png \
	keyboard_A01.png \
	keyboard_B07.png \
	keyboard_C13.png \
	keyboard_E06.png \
	keyboard_A02.png \
	keyboard_B08.png \
	keyboard_D00.png \
	keyboard_E07.png \
	keyboard_A03.png \
	keyboard_B09.png \
	keyboard_D01.png \
	keyboard_A04.png \
	keyboard_B10.png \
	keyboard_D02.png \
	keyboard_None.png \
	keyboard_A05.png \
	keyboard_B11.png \
	keyboard_D03.png \
	keyboard_A06.png \
	keyboard_B12.png \
	keyboard_D04.png \
	keyboard_A07.png \
	keyboard_B13.png \
	keyboard_D05.png \
	keyboard_A08.png \
	keyboard_C00.png \
	keyboard_D06.png \
	keyboard_A09.png \
	keyboard_C01.png \
	keyboard_D07.png \
	keyboard_A10.png \
	keyboard_C02.png \
	keyboard_D08.png \
	keyboard_A11.png \
	keyboard_C03.png \
	keyboard_D09.png \
	keyboard_A12.png \
	keyboard_C04.png \
	keyboard_D10.png \
	keyboard_A13.png \
	keyboard_C05.png \
	keyboard_D11.png \
	keyboard_B00.png \
	keyboard_C06.png \
	keyboard_D12.png \
	keyboard_B01.png \
	keyboard_C07.png \
	keyboard_E00.png \
	keyboard_B02.png \
	keyboard_C08.png \
	keyboard_E01.png \
	keyboard_B03.png \
	keyboard_C09.png \
	keyboard_E02.png \
	keyboard_B04.png \
	keyboard_C10.png \
	keyboard_E03.png
