## Makefile.am for tuxtype - data/images:
## Process with Automake to create Makefile.in

SUBDIRS = backgrounds \
  cities \
  comets \
  hands \
  icons \
  keyboard \
  menu \
  status \
  tux

imagesdir = $(pkgdatadir)/images

dist_images_DATA = README_IMAGES.TXT \
  down.png \
  fishy-.png \
  fishy0.png \
  fishy1.png \
  fishy2.png \
  fishy3.png \
  hidden.jpg \
  insert1.png \
  kcas1_1.jpg \
  kcas1_2.jpg \
  kcas1_3.jpg \
  kcas1_4.jpg \
  kcas2_1.jpg \
  kcas2_2.jpg \
  kcas2_3.jpg \
  kcas2_4.jpg \
  kcas3_1.jpg \
  kcas3_2.jpg \
  kcas3_3.jpg \
  kcas3_4.jpg \
  left.png \
  line2.png \
  main_bkg.png \
  num_0.png \
  nosound.png \
  num_1.png \
  num_2.png \
  num_3.png \
  num_4.png \
  num_5.png \
  num_6.png \
  num_7.png \
  num_8.png \
  num_9.png \
  pract.png \
  right.png \
  splat0.png \
  sound.png \
  standby.png \
  title1.png \
  tutor-alpha.png \
  tutor-alpha2.png \
  tutor.png \
  tutor2.png \
  tutor3.png \
  tux0.png \
  tux1.png \
  tux2.png \
  tux3.png \
  up.png \
  world.png
