## Makefile.am for tuxtype - images/menu:
## Process with Automake to create Makefile.in

images_menudir = $(pkgdatadir)/images/menu

dist_images_menu_DATA = cascade0.png\
cascade1.png\
cascade10.png\
cascade2.png\
cascade3.png\
cascade4.png\
cascade5.png\
cascade6.png\
cascade7.png\
cascade8.png\
cascade9.png\
cascaded.png\
comet0.png\
comet1.png\
comet2.png\
comet3.png\
comet4.png\
comet5.png\
cometd.png\
keyboard0.png\
keyboard1.png\
keyboard2.png\
keyboardd.png\
keycas0.png\
keycas1.png\
keycas2.png\
keycas3.png\
keycas4.png\
keycas5.png\
keycas6.png\
keycas7.png\
keycas8.png\
keycas9.png\
keycasd.png\
lesson0.png\
lesson1.png\
lesson2.png\
lesson3.png\
lessond.png\
list0.png\
list1.png\
list2.png\
list3.png\
list4.png\
list5.png\
list6.png\
list7.png\
listd.png\
main0.png\
main1.png\
main2.png\
main3.png\
main4.png\
main5.png\
main6.png\
main7.png\
maind.png\
quit0.png\
quit1.png\
quit2.png\
quit3.png\
quit4.png\
quit5.png\
quit6.png\
quit7.png\
quit8.png\
quitd.png\
reg0.png\
reg1.png\
reg2.png\
sel0.png\
sel1.png\
sel2.png\
tux_config0.png\
tux_config1.png\
tux_configd.png