## Makefile.am for tuxtype - images/sprites:
## Process with Automake to create Makefile.in

images_spritesdir = $(pkgdatadir)/images/sprites

dist_images_sprites_DATA = alone.svg \
  alone0.png \
  alone1.png \
  aloned.png \
  arrows.png \
  cascade0.png \
  cascade1.png \
  cascade2.png \
  cascade3.png \
  cascade4.png \
  cascade5.png \
  cascade6.png \
  cascade7.png \
  cascade8.png \
  cascade9.png \
  cascade10.png \
  cascaded.png \
  comet0.png \
  comet1.png \
  comet2.png \
  comet3.png \
  comet4.png \
  comet5.png \
  cometd.png \
  credits0.png \
  credits1.png \
  credits2.png \
  credits3.png \
  creditsd.png \
  exclamation.svg \
  exclamation0.png \
  exclamationd.png \
  fleet.svg \
  fleet0.png \
  fleetd.png \
  friends.svg \
  friends0.png \
  friendsd.png \
  goldstar.svg \
  goldstar0.png \
  goldstar1.png \
  goldstard.png \
  help.svg \
  help0.png \
  help1.png \
  help2.png \
  help3.png \
  helpd.png \
  keyboard0.png \
  keyboard1.png \
  keyboard2.png \
  keyboardd.png \
  keycas0.png \
  keycas1.png \
  keycas2.png \
  keycas3.png \
  keycas4.png \
  keycas5.png \
  keycas6.png \
  keycas7.png \
  keycas8.png \
  keycas9.png \
  keycasd.png \
  left.png \
  left.svg \
  left_gray.png \
  left_gray.svg \
  lesson.svg \
  lesson0.png \
  lesson1.png \
  lesson2.png \
  lesson3.png \
  lessond.png \
  list0.png \
  list1.png \
  list2.png \
  list3.png \
  list4.png \
  list5.png \
  list6.png \
  list7.png \
  listd.png \
  main.svg \
  main0.png \
  main1.png \
  main2.png \
  main3.png \
  main4.png \
  main5.png \
  main6.png \
  main7.png \
  maind.png \
  Makefile.am \
  no_goldstar.svg \
  no_goldstar0.png \
  no_goldstard.png \
  nums.svg \
  nums0.png \
  nums1.png \
  nums2.png \
  nums3.png \
  nums4.png \
  nums5.png \
  nums6.png \
  nums7.png \
  numsd.png \
  player_pause.svg \
  player_play.svg \
  quit.svg \
  quit0.png \
  quit1.png \
  quit2.png \
  quit3.png \
  quit4.png \
  quit5.png \
  quit6.png \
  quit7.png \
  quit8.png \
  quitd.png \
  reg0.png \
  reg1.png \
  reg2.png \
  right.png \
  right.svg \
  right_gray.png \
  right_gray.svg \
  sel0.png \
  sel1.png \
  sel2.png \
  standby.png \
  stop.png \
  stop.svg \
  title.png \
  trophy0.png \
  trophy1.png \
  trophyd.png \
  tux4kids.png \
  tux4kids.svg \
  tux_config.svg \
  tux_config0.png \
  tux_config1.png \
  tux_config_brown.svg \
  tux_config_brown0.png \
  tux_config_brown1.png \
  tux_config_brownd.png \
  tux_configd.png \
  tux_helmet0.png \
  tux_helmet1.png \
  tux_helmet2.png \
  tux_helmet_black.svg \
  tux_helmet_black0.png \
  tux_helmet_blackd.png \
  tux_helmet_blue.svg \
  tux_helmet_blue0.png \
  tux_helmet_blue1.png \
  tux_helmet_blue2.png \
  tux_helmet_blue3.png \
  tux_helmet_blue4.png \
  tux_helmet_blue5.png \
  tux_helmet_blued.png \
  tux_helmetd.png \
  tux_helmet_green.svg \
  tux_helmet_green0.png \
  tux_helmet_green1.png \
  tux_helmet_green2.png \
  tux_helmet_green3.png \
  tux_helmet_green4.png \
  tux_helmet_green5.png \
  tux_helmet_greend.png \
  tux_helmet_red.svg \
  tux_helmet_red0.png \
  tux_helmet_red1.png \
  tux_helmet_red2.png \
  tux_helmet_red3.png \
  tux_helmet_red4.png \
  tux_helmet_red5.png \
  tux_helmet_redd.png \
  tux_helmet_yellow.svg \
  tux_helmet_yellow0.png \
  tux_helmet_yellow1.png \
  tux_helmet_yellow2.png \
  tux_helmet_yellow3.png \
  tux_helmet_yellow4.png \
  tux_helmet_yellow5.png \
  tux_helmet_yellowd.png
