## Makefile.am for tuxtype - data/images/tux:
## Process with Automake to create Makefile.in
images_tuxdir = $(pkgdatadir)/images/tux

dist_images_tux_DATA = console.png\
gulp0.png\
gulp1.png\
gulp2.png\
gulp3.png\
run0.png\
run1.png\
stand-.png\
stand0.png\
stand1.png\
tux-console1.png\
tux-console2.png\
tux-console3.png\
tux-console4.png\
tux-drat.png\
tux-egypt0.png\
tux-egypt1.png\
tux-fist0.png\
tux-fist1.png\
tux-kiss1.png\
tux-kiss2.png\
tux-relax1.png\
tux-relax2.png\
tux-sit.png\
tux-yay1.png\
tux-yay2.png\
tux-yes1.png\
tux-yes2.png\
tux-yipe.png\
walk0.png\
walk1.png\
walk2.png\
walk3.png\
win0.png\
win1.png\
yipe0.png\
bigtux.svg\
bigtux0.png\
bigtux0.svg\
bigtux1.png\
bigtux1.svg\
bigtux2.png\
bigtux2.svg\
bigtux3.png\
bigtux3.svg\
bigtux4.png\
bigtux4.svg\
bigtux5.png\
bigtux5.svg\
bigtux6.png\
bigtux6.svg
